added class and home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div id="header">
+    <div class="container">
+      <div class="row">
+        <div class="int">
+          <h1><u>Github Search</u></h1>
+          <h2 class="subtitle">We make it easy for you,connect with developers around the Globe</h2>
+          <form role="form">
+            <h4 appUser id="scroll" routerLink="user-user?" class="badge badge-info">Scroll-Down<i class="fas fa-arrow-circle-down"></i></h4>
+          </form>
+          
+        </div>
+  
